examples/negative/parser_syntax/binop_leading.kai
# Negative fixture (#520 / parser): a binary operator `+`
# appears at the start of an expression where the parser expects
# a primary expression. Parser must reject with "expected
# expression", caret anchored at the operator token.

fn main() : Int = + 1
